# actix-learn

./: .env  Cargo.toml
migrations/2020-03-04-090155_init/: down.sql  up.sql
src/: lib.rs  main.rs  model.rs  schema.rs
