[package]
name = "actix-learn"
version = "0.1.0"
authors = ["sunben <sunben.96@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
failure = "0.1"
actix-http = "1.0"